--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,16 +37,22 @@
         integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="app-loading">
+    <!-- ADD THIS SNIPPET -->
+    <div id="app-loader"
+        style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #fff; z-index: 9999; display: flex; justify-content: center; align-items: center;">
+        <div style="font-size: 1.2rem; color: #64748b;">Loading your dashboard...</div>
+    </div>
+    <!-- END SNIPPET -->
     <div class="container">
         <!-- Step 0: Landing Page -->
         <div class="step active" id="step0">
             <div class="landing-page">
                 <div class="landing-hero">
                     <h1 class="landing-title">World's <span class="gradient-text">smartest</span> FIRE planner</h1>
-                    <p class="landing-subtitle">The only tool that <strong>tracks
-                            net worth and automatically creates
-                            milestones</strong> for your life and guides you towards financial independence.
+                    <p class="landing-subtitle">The most <strong>actionable financial dashboard
+                            available </strong> We provide the guidance and clarity you need to move from tracking your
+                        money to mastering your financial freedom.
                     </p>
 
                     <div class="landing-features">
@@ -73,7 +79,14 @@
                         <span class="cta-arrow">→</span>
                     </button>
 
-                    <p class="landing-note">No signup required • 100% free • Your data stays private</p>
+                    <p class="landing-note">Zero Distractions • Hit Your Milestones • Actionable Insights</p>
+
+                    <p style="margin-top: 12px; font-size: 14px; color: #64748b;">
+                        Already have an account?
+                        <a href="#" onclick="event.preventDefault(); submitSignupModal();"
+                            style="color: #667eea; text-decoration: none; font-weight: 500; transition: color 0.2s;"
+                            onmouseover="this.style.color='#764ba2'" onmouseout="this.style.color='#667eea'">Sign in</a>
+                    </p>
 
                     <div class="scroll-indicator">
                         <span class="scroll-text">Or scroll to see how it works</span>
@@ -974,11 +987,23 @@
                     </div>
                 </div>
                 <div style="display: flex; flex-direction: column; gap: 12px;">
-                    <input type="email" id="signupModalEmail" placeholder="Enter your email"
-                        style="width: 100%; font-size: 15px; padding: 12px 16px; border-radius: 8px; border: 1px solid #d1d5db; box-sizing: border-box;">
                     <button type="button" onclick="submitSignupModal()" class="btn-primary"
-                        style="width: 100%; padding: 12px; font-size: 16px; font-weight: 600; border-radius: 8px; border: none; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: #ffffff; cursor: pointer;">
-                        Sign Up
+                        style="width: 100%; padding: 12px 16px; font-size: 16px; font-weight: 600; border-radius: 8px; border: none; background: #fff; color: #1f2937; cursor: pointer; box-shadow: 0 1px 3px rgba(0,0,0,0.1); border: 1px solid #d1d5db; display: flex; align-items: center; justify-content: center; gap: 12px;">
+                        <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"
+                                fill="#4285F4" />
+                            <path
+                                d="M9.003 18c2.43 0 4.467-.806 5.956-2.18L12.05 13.56c-.806.54-1.836.86-3.047.86-2.344 0-4.328-1.584-5.036-3.711H.96v2.332C2.44 15.983 5.485 18 9.003 18z"
+                                fill="#34A853" />
+                            <path
+                                d="M3.964 10.712c-.18-.54-.282-1.117-.282-1.71 0-.593.102-1.17.282-1.71V4.96H.957C.347 6.175 0 7.55 0 9.002c0 1.452.348 2.827.957 4.042l3.007-2.332z"
+                                fill="#FBBC05" />
+                            <path
+                                d="M9.003 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.464.891 11.426 0 9.003 0 5.485 0 2.44 2.017.96 4.958L3.967 7.29c.708-2.127 2.692-3.71 5.036-3.71z"
+                                fill="#EA4335" />
+                        </svg>
+                        Sign in with Google
                     </button>
                     <button type="button" onclick="closeSignupModal()" class="btn-secondary"
                         style="width: 100%; padding: 12px; font-size: 15px; font-weight: 500; border-radius: 8px; border: 1px solid #d1d5db; background: #fff; color: #6b7280; cursor: pointer;">
@@ -1014,6 +1039,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Supabase Client -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
