feat: add blog links and update CTA messaging
- Added FIRE Blog navigation pill to feature section with icon and hover effects
- Updated CTA copy from "passive income" to "smart tracking" for clarity
- Created new blog CTA card in landing section with styled link and responsive design

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,11 @@
                             <span class="feature-icon">🏠</span>
                             <span>Retirement Planner</span>
                         </div>
+                        <a href="https://butfirstfire.com/blog" class="feature-pill feature-pill-link"
+                            style="text-decoration: none;">
+                            <span class="feature-icon">📚</span>
+                            <span>FIRE Blog</span>
+                        </a>
                     </div>
 
                     <button class="btn-cta" onclick="startBuilder()">
@@ -152,11 +157,22 @@
 
                 <div class="landing-cta-section">
                     <h2>Start Your Financial Independence Journey Today</h2>
-                    <p>Join thousands planning their path to financial freedom through passive income</p>
+                    <p>Join thousands planning their path to financial freedom through smart tracking</p>
                     <button class="btn-cta btn-cta-pulse" onclick="startBuilder()">
                         Launch FIRE Date Projector
                         <span class="cta-arrow">→</span>
                     </button>
+
+                    <div class="blog-cta-card">
+                        <div class="blog-cta-content">
+                            <p>You can also explore our blog for actionable guides on early retirement, calculating your
+                                FIRE number,
+                                and building passive income streams.</p>
+                            <a href="https://butfirstfire.com/blog" class="blog-cta-link">
+                                Read the Blog <span class="cta-arrow">→</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="landing-keywords">
