--- a/frontend/index.html
+++ b/frontend/index.html
@@ -228,7 +228,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="annualIncome">Total Annual Family Income</label>
+                    <label for="annualIncome">Total Annual Income from Employment</label>
                     <input type="number" id="annualIncome" class="input-field" placeholder="150000" min="0"
                         step="1000" />
                 </div>
