--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                 <div class="landing-hero">
                     <h1 class="landing-title">World's <span class="gradient-text">smartest</span> FIRE planner</h1>
                     <p class="landing-subtitle">The most <strong>actionable financial dashboard
-                            available </strong> We provide the guidance and clarity you need to move from tracking your
+                            available. </strong> We provide the guidance and clarity you need to move from tracking your
                         money to mastering your financial freedom.
                     </p>
 
@@ -72,11 +72,6 @@
                             <span class="feature-icon">🏠</span>
                             <span>Retirement Planner</span>
                         </div>
-                        <a href="https://butfirstfire.com/blog" class="feature-pill feature-pill-link"
-                            style="text-decoration: none;">
-                            <span class="feature-icon">📚</span>
-                            <span>FIRE Blog</span>
-                        </a>
                     </div>
 
                     <button class="btn-cta" onclick="startBuilder()">
@@ -85,6 +80,14 @@
                     </button>
 
                     <p class="landing-note">Zero Distractions • Hit Your Milestones • Actionable Insights</p>
+
+                    <p style="margin-top: 20px; font-size: 15px; color: #475569;">
+                        Want to learn about F.I.R.E?
+                        <a href="https://butfirstfire.com/blog"
+                            style="color: #667eea; text-decoration: none; font-weight: 600; transition: color 0.2s;"
+                            onmouseover="this.style.color='#764ba2'" onmouseout="this.style.color='#667eea'">Check out
+                            our blog →</a>
+                    </p>
 
                     <p style="margin-top: 12px; font-size: 14px; color: #64748b;">
                         Already have an account?
