feat: add subtitle field to blog post metadata
- Updated blog template to display subtitle instead of description in article excerpts
- Added subtitle field to all existing blog posts in posts.json
- Modified build script to extract subtitle from post metadata

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -83,7 +83,7 @@
                             ${post.featured ? '<span class="article-tag">Featured</span>' : ''}
                         </div>
                         <h3 class="article-title">${htmlEscape(post.title)}</h3>
-                        <p class="article-excerpt">${htmlEscape(post.description || '')}</p>
+                        <p class="article-excerpt">${htmlEscape(post.subtitle || '')}</p>
                         <span class="read-more">Read More →</span>
                     </div>
                   </article>
