feat: update page title to emphasize complete FIRE journey experience

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passive Income Goal Tracker - Plan Your Financial Independence Journey</title>
+    <title>Learn. Plan. Track. Your complete FIRE journey—simplified.</title>
     <meta name="description"
         content="Free passive income calculator and goal tracker. Plan your financial independence with dividend investing, rental income, and multiple income streams. Track your path to financial freedom.">
     <meta name="keywords"
