feat: add footer to blog page with copyright and tagline

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -187,6 +187,12 @@
                         Wealth Building, Investment Portfolio Tracking, Financial Freedom Planning
                     </p>
                 </div>
+                <footer class="blog-footer">
+                    <div class="footer-container">
+                        <p>&copy; 2025 FIRE Planner. All rights reserved.</p>
+                        <p class="footer-tagline">Empowering your journey to financial independence</p>
+                    </div>
+                </footer>
             </div>
         </div>
 
