feat: Add new static pages and local development scripts, and enhance AI assistant capabilities with chat history.

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="blog.css">
 </head>
 
@@ -50,8 +51,14 @@
     <!-- Footer -->
     <footer class="blog-footer">
         <div class="footer-container">
-            <p>&copy; 2025 FIRE Planner. All rights reserved.</p>
+            <p>&copy; 2025 But First Fire. All rights reserved.</p>
             <p style="margin-top: 0.5rem; font-size: 0.875rem;">Empowering your journey to financial independence</p>
+            <p class="footer-links" style="margin-top: 0.75rem;">
+                <a href="/about" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">About</a>
+                <a href="/privacy" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Privacy Policy</a>
+                <a href="/terms" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Terms of Service</a>
+                <a href="/contact" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Contact</a>
+            </p>
         </div>
     </footer>
 
