--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="google-adsense-account" content="ca-pub-4689015782638460">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn. Plan. Track. Your complete FIRE journey—simplified.</title>
@@ -189,8 +189,17 @@
                 </div>
                 <footer class="blog-footer">
                     <div class="footer-container">
-                        <p>&copy; 2025 FIRE Planner. All rights reserved.</p>
+                        <p>&copy; 2025 But First Fire. All rights reserved.</p>
                         <p class="footer-tagline">Empowering your journey to financial independence</p>
+                        <p class="footer-links" style="margin-top: 0.75rem;">
+                            <a href="/about" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">About</a>
+                            <a href="/privacy" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Privacy
+                                Policy</a>
+                            <a href="/terms" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Terms of
+                                Service</a>
+                            <a href="/contact"
+                                style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">Contact</a>
+                        </p>
                     </div>
                 </footer>
             </div>
